@@ -120,6 +120,7 @@ fixed formatting. Tomasz Flendrich
 * Update the patch for bug 2817.  Harlan Stenn.
 * More updates for bug 2817.  Harlan Stenn.
 * Fix bugs in tests/ntpd/ntp_prio_q.c.  Harlan Stenn.
+* gcc on older HPUX may need +allowdups.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
